date fixation and dark mode color

--- a/src/styles/dark-theme.less
+++ b/src/styles/dark-theme.less
@@ -123,7 +123,7 @@ body.dark-theme {
   }
 
   & .ant-picker-cell-in-view:hover,.ant-picker-cell-end:hover,.ant-picker-cell-start:hover{
-  .ant-picker-cell-inner{
+    & .ant-picker-cell-inner{
     background:#e0e0e0 !important;
     color:black !important;
   }}
